Revert "Layout issue fixed"
This reverts commit ada5700fe88405b49e326a24c7002827ba89b647.

--- a/app/globals.css
+++ b/app/globals.css
@@ -157,17 +157,6 @@ body {
   animation-delay: 300ms;
 }
 
-.scrollbar-hide {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
-  width: 0;
-  height: 0;
-}
-
 /* Skeleton shimmer */
 .skeleton {
   position: relative;
